# fastmcp-test

./: .gitignore  .gitlab-ci.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: index.html  pyodide_app.js
app/wheels/: pyperclip-1.9.0-py3-none-any.whl
fastmcp_test/: base_connector.py  httpbinconnector.py  httpbinmcp.py
